2005-07-27  Chris Taylor  <chris@icculus.org>

	* d2x.xcode/project.pbxproj: build the editor by default

2005-07-25  Chris Taylor  <chris@icculus.org>

	* main/bmread.c: cast some fprintf arguments to int, to fix
	warnings

	* main/editor/medrobot.c: no checking if obj->id > -1
	(it's unsigned)

	* main/editor/ksegsize.c, main/editor/segment.c,
	main/editor/seguvs.c, ui/mouse.c: avoid assignments between
	sbyte * and char *, ubyte * and char * to fix warnings with gcc 4.0

2005-07-24  Chris Taylor  <chris@icculus.org>

	* main/bmread.c: call file static var 'time' 'play_time' instead,
	because of conflict with function 'time' in /usr/include/time.h
	(Mac OS X 10.4)

2005-07-22  Chris Taylor  <chris@icculus.org>

	* main/editor/group.c: remove duplicate tmap_xlate_table

2005-07-21  Chris Taylor  <chris@icculus.org>

	* d2x.xcode/project.pbxproj: make file paths relative to project,
	add some files (so it builds), warnings are not errors
	(ubyte *, sbyte * mismatches found when using gcc 4.0)

	* arch/linux/ipx_mcast4.c, arch/linux/ipx_udp.c,
	d2x.xcode/project.pbxproj, main/network.c, main/network.h,
	main/newdemo.c: fix pointer mismatches, warnings are errors again

2005-07-03  Chris Taylor  <chris@icculus.org>

	* include/ui.h, ui/file.c, ui/inputbox.c: add ui_inputbox_set_text

	* include/ui.h, main/editor/centers.c, main/editor/medrobot.c,
	main/editor/medwall.c, ui/radio.c: add ui_radio_set_value,
	draw an "O" in the current radio button

2005-07-01  Chris Taylor  <chris@icculus.org>

	* include/ui.h, main/editor/centers.c, main/editor/eswitch.c,
	main/editor/medwall.c, ui/checkbox.c: add ui_checkbox_check

2005-06-23  Chris Taylor  <chris@icculus.org>

	* installation.txt: describe new directory system
	and mention recursive mission searching

2005-06-22  Chris Taylor  <chris@icculus.org>

	* main/editor/kgame.c: load .rl2 files instead of .lvl files
	(some editor info could be stored in .rdl / .rl2 files)
