@@ -1,3 +1,7 @@
+2005-07-28  Chris Taylor  <chris@icculus.org>
+
+	* main/gauges.c: show gauges in SDL (help fix bug #2267)
+
 2005-07-27  Chris Taylor  <chris@icculus.org>
 
 	* d2x.xcode/project.pbxproj: build the editor by default
